Setting up all the rolls
Got everyone going

--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -18,6 +18,7 @@
 	</div>
 	<div class="sheet-header corruption">
 		<div class="sheet-section-name">Corruption</div>
+		<input type="hidden" value=0 name="attr_corruptionmarked">
 		<input type="checkbox" class="sheet-progression" value=1 name="attr_corruption1">
 		<input type="checkbox" class="sheet-progression" value=1 name="attr_corruption2">
 		<input type="checkbox" class="sheet-progression" value=1 name="attr_corruption3">
@@ -31,6 +32,7 @@
 	<div class="sheet-clearfix"></div>
 </div>
 <div class="sheet-attributes">
+	<input type="hidden" value=0 name="attr_conditionsmarked">
 	<div class="sheet-header">
 		<button type="roll" name="roll_TestHope" value="/me rolls @{Hoperoll} for Hope">Hope</button>
 		<input type="hidden" value="[[2d6 + @{hope} - @{despairing} + @{ongoing}]]" name="attr_Hoperoll">
@@ -194,29 +196,40 @@
 			<span class="sheet-basicmove-name">Scan the Environment</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
-				When you investigate the world around you, describe what sense, expertise, power, or skill you use to interact with your environment, and roll +Community. On a hit, your Guide will show you something about your world. On a 10+ you gain +1 Ongoing until the end of the scene when acting on the information you gain.
+				When you investigate the world around you, describe what sense, expertise, power, or skill you use to interact with your environment, and <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Scan the Environment}}  {{rollvalue=@{Communityroll}}} {{Hit= Your Guide will show you something about your world.}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				roll +Community.</button> 
+				<br>On a hit, your Guide will show you something about your world. On a 10+ you gain +1 Ongoing until the end of the scene when acting on the information you gain.
 			</div>
 		</div>
 		<div class="sheet-basicmove">
 			<span class="sheet-basicmove-name">Redirect the Current</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
-				When you act to remove an obstacle in your path, roll +Calm. On a hit you succeed at your task and avoid trouble. On a 7-9 the Guide will give you a hard choice, introduce an instability, or enact a cost.
+				When you act to remove an obstacle in your path, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Redirect the Current}}  {{rollvalue=@{Calmroll}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				roll +Calm.</button> 
+				<br>On a hit you succeed at your task and avoid trouble. On a 7-9 the Guide will give you a hard choice, introduce an instability, or enact a cost.
 			</div>
 		</div>
 		<div class="sheet-basicmove">
 			<span class="sheet-basicmove-name">Reach Out</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
-				When you ask for help from nature or your community, roll +Hope. On a hit your pleas are heard. Describe how the natural world or members of your community come
-	to your aid. On a 7-9 the Guide will describe how the help is temporary, unstable, or threatening
+				When you ask for help from nature or your community, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Reach Out}}  {{rollvalue=@{Hoperoll}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				roll +Hope.</button> 
+				<br>On a hit your pleas are heard. Describe how the natural world or members of your community come to your aid. On a 7-9 the Guide will describe how the help is temporary, unstable, or threatening
 			</div>
 		</div>
 		<div class="sheet-basicmove">
 			<span class="sheet-basicmove-name">Defend Another</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
-				When you risk your own safety to protect another, roll +Altruism. On a hit you protect your ward. On a 7-9, choose two from the following list:
+				When you risk your own safety to protect another, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Defend Another}}  {{rollvalue=@{Altruismroll}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				roll +Altruism.</button> 
+				<br>On a hit you protect your ward. On a 7-9, choose two from the following list:
 				<ul>
 					<li>You take the hit</li>
 					<li>You end up in a bad spot</li>
@@ -229,7 +242,10 @@
 			<span class="sheet-basicmove-name">Do Something Wondrous</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
-				When you use your gifts in a spectacular way, roll +Drive. On a hit, describe how you accomplished your goal. On a 7-9, choose one:
+				When you use your gifts in a spectacular way, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Do Something Wondrous}}  {{rollvalue=@{Drive}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				roll +Drive.</button> 
+				<br>On a hit, describe how you accomplished your goal. On a 7-9, choose one:
 				<ul>
 					<li>You suffer a backlash</li>
 					<li>You lose control at the worst time</li>
@@ -241,7 +257,10 @@
 			<span class="sheet-basicmove-name">Salve Wounds</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
-				When you tend to another’s suffering, ask that player (or the Guide if it’s an NPC) if they accept your help. If the answer is yes, roll +Hope. On a hit, you successfully render aid.
+				When you tend to another’s suffering, ask that player (or the Guide if it’s an NPC) if they accept your help. If the answer is yes, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Salve Wounds}}  {{rollvalue=@{Hoperoll}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				roll +Hope.</button>
+				On a hit, you successfully render aid.
 				<br>If your target is a PC, they clear a Condition or hold 1 Maneuver.
 				<br>If you are tending an NPC, you help them as indicated by the narrative and clear a Condition or a Corruption.
 				<br>On a 10+, you also mark Harmony or hold 1 Maneuver.
@@ -312,7 +331,9 @@
 			<span class="sheet-specialmove-name">Unleash</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-specialmove-description sheet-hide">
-				When you <strong>give in to violence</strong>, roll +Questions
+				When you <strong>give in to violence</strong>, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Unleash}}  {{rollvalue=[[2d6+@{unleashquestion-protect}+@{unleashquestion-onlyone}+@{unleashquestion-nooption}]]}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				roll +Questions.</button>
 				<ul>
 					<li>
 						<label class="sheet-question-label">
@@ -345,13 +366,16 @@
 			<span class="sheet-specialmove-name">Endure</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-specialmove-description sheet-hide">
-				When you <strong>endure physical, emotional, or psychic trauma</strong>, roll +Conditions marked. On a 10+ it takes its toll. Either remove yourself from the scene in some way or choose two from the following list. On a 7-9, choose one:
+				When you <strong>endure physical, emotional, or psychic trauma</strong>, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Endure}}  {{rollvalue=[[2d6+@{conditionsmarked}]]}} {{Hit= Either remove yourself from the scene in some way or choose two from the list}} {{Partial= Choose one from the list}} {{Miss= You avoid other consequences}}">
+				roll +Conditions marked.</button>
+				On a 10+ it takes its toll. Either remove yourself from the scene in some way or choose two from the following list. On a 7-9, choose one:
 				<ul>
 					<li>The trauma unsettles you. Mark a Condition</li>
 					<li>The trauma impairs your physical, emotional, or psychic defenses. Mark Corruption</li>
 					<li>Your attempt to defend yourself goes wrong. Expose an ally to danger.</li>
+					<li>The trauma damages you in some way. Take -1 Ongoing and remain in pain, distressed, or distracted until you receive help as defined by the narrative.</li>
 				</ul>
-				The trauma damages you in some way. Take -1 Ongoing and remain in pain, distressed, or distracted until you receive help as defined by the narrative.
 				<br>On a 6-, you avoid consequence, and mark Harmony as normal.
 			</div>
 		</div>
@@ -359,14 +383,20 @@
 			<span class="sheet-specialmove-name">Resist Corruption</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-specialmove-description sheet-hide">
-				When you are <strong>exposed to concentrated or insidious Corruption</strong>, roll +Corruption marked. On a 10+ the corruption works its way deeper into your mind, body, and soul. Mark Corruption. On a 7-9, you stave off the corruption for now, but something inside you is unsettled. Mark a Condition. On a 6-, mark Harmony as normal and hold onto your true self. You keep the corruption at bay and reduce your Corruption score by 1.
+				When you are <strong>exposed to concentrated or insidious Corruption</strong>, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=Resist Corruption}}  {{rollvalue=[[2d6+@{corruptionmarked}]]}} {{Hit= The corruption works its way deeper into your mind, body, and soul. Mark Corruption.}} {{Partial= You stave off the corruption for now, but something inside you is unsettled. Mark a Condition.}} {{Miss= You hold onto your true self. You keep the corruption at bay and reduce your Corruption score by 1.}}">
+				roll +Corruption marked.</button>
+				On a 10+ the corruption works its way deeper into your mind, body, and soul. Mark Corruption. On a 7-9, you stave off the corruption for now, but something inside you is unsettled. Mark a Condition. On a 6-, mark Harmony as normal and hold onto your true self. You keep the corruption at bay and reduce your Corruption score by 1.
 			</div>
 		</div>
 		<div class="sheet-specialmove">
 			<span class="sheet-specialmove-name">What Have We Done?</span>
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-specialmove-description sheet-hide">
-				When you <strong>pause to reflect on the harm you’ve caused</strong>, roll +Conditions marked. On a hit, you worry that your actions were a part of who you are, who you were, or who you’re becoming. Choose one. On a 10+, also mark Corruption:
+				When you <strong>pause to reflect on the harm you’ve caused</strong>, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
+				value="&{template:dim} {{name=What Have We Done?}}  {{rollvalue=[[2d6+@{conditionsmarked}]]}} {{Hit= Also mark corruption}} {{Partial= On a hit, you worry that your actions were a part of who you are, who you were, or who you’re becoming. Choose one.}} {{Miss= Clear a Condition and narrate your character coming to terms with the trauma or engaging in a conversation with another to talk about what happened.}}">
+				roll +Conditions marked.</button>
+				On a hit, you worry that your actions were a part of who you are, who you were, or who you’re becoming. Choose one. On a 10+, also mark Corruption:
 				<ul>
 					<li>Clear Despairing and try to convince someone of an impending doom.</li>
 					<li>Clear Selfish and become overprotective of someone or something of significance.</li>
@@ -387,8 +417,8 @@
 <!-- &{template:dim} {{name=Test}} 
 	{{rollvalue=[[2d6]]}} 
 	{{Hit= Hit Content}} 
-	{{Partial = Partial Content}} 
-	{{Miss = Miss Content}}-->
+	{{Partial= Partial Content}} 
+	{{Miss= Miss Content}}-->
 
 <rolltemplate class="sheet-rolltemplate-dim">
 	<div class="sheet-container">
@@ -413,17 +443,7 @@
 	</div>
 </rolltemplate>
 
-<!-- <rolltemplate class="sheet-rolltemplate-hit">
-	<div class="sheet-template-header">{{rollname}}</div>
+<script>
 
-</rolltemplate>
 
-<rolltemplate class="sheet-rolltemplate-partial">
-	<div class="sheet-template-header">{{rollname}}</div>
-	
-</rolltemplate>
-
-<rolltemplate class="sheet-rolltemplate-miss">
-	<div class="sheet-template-header">{{rollname}}</div>
-
-</rolltemplate> -->
+</script>
