Basic Moves done
Still need to do special

--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -197,7 +197,7 @@
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
 				When you investigate the world around you, describe what sense, expertise, power, or skill you use to interact with your environment, and <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
-				value="&{template:dim} {{name=Scan the Environment}}  {{rollvalue=@{Communityroll}}} {{Hit= Your Guide will show you something about your world.}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				value="&{template:dim} {{name=Scan the Environment}}  {{rollvalue=@{Communityroll}}} {{Hit= You gain +1 Ongoing until the end of the scene when acting on the information you gain.}} {{Partial= Your Guide will show you something about your world.}}">
 				roll +Community.</button> 
 				<br>On a hit, your Guide will show you something about your world. On a 10+ you gain +1 Ongoing until the end of the scene when acting on the information you gain.
 			</div>
@@ -207,7 +207,7 @@
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
 				When you act to remove an obstacle in your path, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
-				value="&{template:dim} {{name=Redirect the Current}}  {{rollvalue=@{Calmroll}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				value="&{template:dim} {{name=Redirect the Current}}  {{rollvalue=@{Calmroll}}} {{Hit= You avoid trouble}} {{Partial= You succeed at your task, but your Guide will give you a hard choice, introduce an instability, or enact a cost.}}">
 				roll +Calm.</button> 
 				<br>On a hit you succeed at your task and avoid trouble. On a 7-9 the Guide will give you a hard choice, introduce an instability, or enact a cost.
 			</div>
@@ -217,7 +217,7 @@
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
 				When you ask for help from nature or your community, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
-				value="&{template:dim} {{name=Reach Out}}  {{rollvalue=@{Hoperoll}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				value="&{template:dim} {{name=Reach Out}}  {{rollvalue=@{Hoperoll}}} {{Hit= The help is lasting, stable, and non-threatening}} {{Partial= Your pleas are heard. Describe how the natural world or members of your community come to your aid. The Guide will describe how the help is temporary, unstable, or threatening}}">
 				roll +Hope.</button> 
 				<br>On a hit your pleas are heard. Describe how the natural world or members of your community come to your aid. On a 7-9 the Guide will describe how the help is temporary, unstable, or threatening
 			</div>
@@ -227,7 +227,7 @@
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
 				When you risk your own safety to protect another, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
-				value="&{template:dim} {{name=Defend Another}}  {{rollvalue=@{Altruismroll}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				value="&{template:dim} {{name=Defend Another}}  {{rollvalue=@{Altruismroll}}} {{Hit= You protect your ward without further risk.}} {{Partial= You protect your ward, but choose two consequences}} {{Miss= Choose two consequences, and you fail to protect your ward}}">
 				roll +Altruism.</button> 
 				<br>On a hit you protect your ward. On a 7-9, choose two from the following list:
 				<ul>
@@ -243,7 +243,7 @@
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
 				When you use your gifts in a spectacular way, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
-				value="&{template:dim} {{name=Do Something Wondrous}}  {{rollvalue=@{Drive}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				value="&{template:dim} {{name=Do Something Wondrous}}  {{rollvalue=@{Drive}}} {{Hit= You accomplish your goal without consequences}} {{Partial= You accomplish your goal, but suffer a consequence}}">
 				roll +Drive.</button> 
 				<br>On a hit, describe how you accomplished your goal. On a 7-9, choose one:
 				<ul>
@@ -258,7 +258,7 @@
 			<input type="checkbox" class="sheet-toggle" title="show/hide"  value="1" />
 			<div class="sheet-basicmove-description sheet-hide">
 				When you tend to another’s suffering, ask that player (or the Guide if it’s an NPC) if they accept your help. If the answer is yes, <button type="roll" class="sheet-inlinebutton" name="roll_FILLMEIN"
-				value="&{template:dim} {{name=Salve Wounds}}  {{rollvalue=@{Hoperoll}}} {{Hit= Hit Content}} {{Partial= Partial Content}} {{Miss= Miss Content}}">
+				value="&{template:dim} {{name=Salve Wounds}}  {{rollvalue=@{Hoperoll}}} {{Hit= You also mark Harmony or hold 1 Maneuver}} {{Partial= You successfully render aid. If your target is a PC, they clear a Condition or hold 1 Maneuver. If you are tending an NPC, you help them as indicated by the narrative and clear a Condition or a Corruption.}}">
 				roll +Hope.</button>
 				On a hit, you successfully render aid.
 				<br>If your target is a PC, they clear a Condition or hold 1 Maneuver.
@@ -423,21 +423,21 @@
 <rolltemplate class="sheet-rolltemplate-dim">
 	<div class="sheet-container">
 		<div class="sheet-template-header">{{name}}</div>
-		<div class="sheet-template-row"><em>Roll:</em> {{rollvalue}}</div>
-		{{#rollGreater() rollvalue 6}} 
-			<div class="sheet-template-row">
+		<div class="sheet-template-row sheet-roll"><em>Roll:</em> {{rollvalue}}</div>
+		{{#rollGreater() rollvalue 6}}
+			<div class="sheet-template-row sheet-partial">
 				<strong>Hit:</strong> {{Partial}}
 			</div>
 		{{/rollGreater() rollvalue 6}}
-		{{#rollGreater() rollvalue 9}}
-			<div class="sheet-template-row">
+		{{#rollGreater() rollvalue 9}} {{#Hit}}
+			<div class="sheet-template-row sheet-hit">
 				<strong>Hit+:</strong> {{Hit}}
 			</div>
-		{{/rollGreater() rollvalue 9}}
+		{{/Hit}} {{/rollGreater() rollvalue 9}}
 		{{#rollLess() rollvalue 7}} 
-			<div class="sheet-template-row">
-				Mark Harmony.<br>
-				<strong>Miss:</strong> {{Miss}}
+			<div class="sheet-template-row sheet-miss">
+				Mark Harmony.
+				{{#Miss}}<br><strong>Miss:</strong> {{Miss}}{{/Miss}} 
 			</div>
 		{{/rollLess() rollvalue 7}}
 	</div>
