--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -1,3 +1,37 @@
+
+
+<script>
+
+	on("change:corruption1 change:corruption2 change:corruption3 change:corruption4 change:corruption5", function() {
+		getAttrs(["corruption1", "corruption2", "corruption3", "corruption4", "corruption5"], function(values) {
+			sum = 0;
+			for (var el in values) {
+				if( values.hasOwnProperty( el ) ) {
+					  sum += parseInt( values[el] );
+				}
+			}
+			setAttrs({
+				corruptionmarked: sum
+			});
+		});
+	});
+	
+	on("change:despairing change:selfish change:isolated change:angry change:conflicted", function() {
+		getAttrs(["despairing", "selfish", "isolated", "angry", "conflicted"], function(values) {
+			sum = 0;
+			for (var el in values) {
+				if( values.hasOwnProperty( el ) ) {
+					  sum -= parseInt( values[el] )/2;
+				}
+			}
+			setAttrs({
+				corruptionmarked: sum
+			});
+		});
+	});
+	
+	</script>
+
 <div class="sheet-header sheet-topbar">
     <input class="sheet-field-name" type="text" placeholder="Name" name="attr_character_name">
 	<input class="sheet-field-class" type="text" placeholder="Playbook" name="attr_playbook">
@@ -442,8 +476,3 @@
 		{{/rollLess() rollvalue 7}}
 	</div>
 </rolltemplate>
-
-<script>
-
-
-</script>
