--- a/Forbidden_Lands/Forbidden_Lands.html
+++ b/Forbidden_Lands/Forbidden_Lands.html
@@ -1,4 +1,4 @@
-<!--3/8/20 set sheet version manually with currentVersion in sheetworkers-->
+<!--3/23/20 set sheet version manually with currentVersion in sheetworkers-->
 <input type="hidden" name="attr_version" value="0" />
 <!-- ADDED recalc checkbox to force sheet worker events. temp unhide for testing purposes-->
 <input class="hidden" name="attr_recalc1" type="checkbox" />
@@ -17,17 +17,20 @@
     <span class="announcements-show toggle-dice-only toggle-monster-only" name="attr_version">&nbsp;</span>
     <div class="announcements toggle-dice-only toggle-monster-only">
         <h3 data-i18n="latest-announcements">Latest Announcements</h3>
-        <span class="footer">3/8/20</span>
+        <span class="footer">3/23/20</span>
         <ol style="margin: 0 2em 0 2em; padding: 0 1em 0 3em;">
-            <span>v1.64</span>
-            <li>Bug fix: shield shove/parry rolls were erroneously including strength as gear dice.</li>
-            <li>Optimized the css that reduces the opacity of damage skulls above the attribute's max value. Purely cosmetic.</li>
+            <span>v1.65</span>
+            <li>Currently adding Misc Gear modifier to skills.</li>
         </ol>
         <br>
         <input type="checkbox" class="announcements-older-show" name="attr_show_announcements_old" value="1" data-i18n-title="old-announcements" />
         <span data-i18n-title="old-announcements">&nbsp;</span>
         <span class="announcements-older-show">
             <ol>
+                <span>v1.64</span>
+                <li>Bug fix: shield shove/parry rolls were erroneously including strength as gear dice.</li>
+                <li>Optimized the css that reduces the opacity of damage skulls above the attribute's max value. Purely cosmetic.</li>
+
                 <span>v1.63</span>
                 <li>Added a toggleable 2nd row to each skill.</li>
                 <li>Added Artifact dice, Misc Skill modifier, and Notes to each skill.</li>
