Added Version Tracker

--- a/Descent into Midnight/DescentIntoMIdnight.html
+++ b/Descent into Midnight/DescentIntoMIdnight.html
@@ -3,7 +3,7 @@
 
 
 <div>
-
+	<input type="hidden" value="Version 1.00.00">
 	<div class="header topbar">
 		<input class="field-name" type="text" placeholder="Name" name="attr_character_name">
 		<input class="field-class" type="text" placeholder="Playbook" name="attr_playbook">
