update version number

--- a/Shadowrun5thEdition/Shadowrun5thEdition.html
+++ b/Shadowrun5thEdition/Shadowrun5thEdition.html
@@ -1,5 +1,5 @@
 
-<input name="attr_version" type="hidden" value="4.13"/>
+<input name="attr_version" type="hidden" value="4.14"/>
 <input class="sheet_type" name="attr_sheet_type" type="hidden" value="pc"/>
 <input class="character-type" name="attr_flag_special" type="hidden" value="mundane"/>
 <div class="pc">
@@ -1000,7 +1000,7 @@
                   <h3 data-i18n="skill">skill</h3>
                   <select name="attr_skill" title="@{repeating_range_${x}_skill}" value="@{firearms}">
                     <optgroup label="Combat Skills">Combat Skills
-                      <option data-i18n="firearms" value="@{firearms}" selected="selected">Firearms Group</option>
+                      <option data-i18n="firearmsgroup" value="@{firearms}" selected="selected">Firearms Group</option>
                       <option data-i18n="automatics" value="@{automatics}">Automatics</option>
                       <option data-i18n="archery" value="@{archery}">Archery</option>
                       <option data-i18n="exoticrange" value="0">Exotic Range</option>
@@ -3736,7 +3736,6 @@ const updateRepeatingSkillLimit = eventinfo => {
 const updateRepeatingSkillName = eventinfo => {
   const repRowID = processingFunctions.getReprowid(eventinfo.triggerName)
   const translationKey = eventinfo.newValue.replace(/ /g, '').toLowerCase()
-  console.log(translationKey)
   const translation = getTranslationByKey(translationKey);
   processingFunctions.setAttributes({
     [`${repRowID}_display_skill`]: translation
