- Fixed experince fieldset indentation
- Added a text area for experience points notes

--- a/AD&D 2E Revised/2ESheet.html
+++ b/AD&D 2E Revised/2ESheet.html
@@ -66,45 +66,53 @@
 <div class="sheet-2colrow">
     <div class="sheet-col">
         <h4><b>Experience</b></h4>
-        <fieldset class="repeating_XP" name="attr_repxp"><table>
-    <tr>
-        <td><h4><b>Class:</b></h4><br><input type="text" name="attr_expclassname" title="@{repeating_XP_$X_expclassname}"></td>
-        <td><h4><b>To Next:</b></h4><br><input type="text" name="attr_expnextlevel" title="@{repeating_XP_$X_expnextlevel}"></td>
-    </tr>
-    <tr>
-        <td><h4><b>Current Exp:</b></h4><br><input type="text" name="attr_expcurrent1" title="@{repeating_XP_$X_expcurrent1}" value="0"></td>
-        <td><h4><b>Gained Exp:</b></h4><br><input type="text" name="attr_expgain1" title="@{repeating_XP_$X_expgain1}" value="0"></td>
-    </tr>
-    <tr>
-        <td><h4><b>New Exp Total:</b></h4><br><input type="text" name="attr_expnew" title="@{repeating_XP_$X_expnew}" value="@{expcurrent1}+@{expgain1}" disabled="true"></td>
-        <td><h4><b>Prime Req Exp Total:</b></h4><br><input type="text" name="attr_expprime" title="@{repeating_XP_$X_expprime}" value="@{expcurrent1}+round(@{expgain1}*(1+(@{prime1}/100)))" disabled="true"></td>
-    </tr>
-    <tr>
-        <td><h4><b>Prime Requisite Bonus:</b></h4><br><input type="text" name="attr_prime1" title="@{repeating_XP_$X_prime1}" class="short" value="10"><h4><b>%</b></h4></td>
-    </tr>
-    </table></fieldset>
+        <fieldset class="repeating_XP" name="attr_repxp">
+        <table>
+            <tr>
+                <td><h4><b>Class:</b></h4><br><input type="text" name="attr_expclassname" title="@{repeating_XP_$X_expclassname}"></td>
+                <td><h4><b>To Next:</b></h4><br><input type="text" name="attr_expnextlevel" title="@{repeating_XP_$X_expnextlevel}"></td>
+            </tr>
+            <tr>
+                <td><h4><b>Current Exp:</b></h4><br><input type="text" name="attr_expcurrent1" title="@{repeating_XP_$X_expcurrent1}" value="0"></td>
+                <td><h4><b>Gained Exp:</b></h4><br><input type="text" name="attr_expgain1" title="@{repeating_XP_$X_expgain1}" value="0"></td>
+            </tr>
+            <tr>
+                <td><h4><b>New Exp Total:</b></h4><br><input type="text" name="attr_expnew" title="@{repeating_XP_$X_expnew}" value="@{expcurrent1}+@{expgain1}" disabled="true"></td>
+                <td><h4><b>Prime Req Exp Total:</b></h4><br><input type="text" name="attr_expprime" title="@{repeating_XP_$X_expprime}" value="@{expcurrent1}+round(@{expgain1}*(1+(@{prime1}/100)))" disabled="true"></td>
+            </tr>
+            <tr>
+                <td><h4><b>Prime Requisite Bonus:</b></h4><br><input type="text" name="attr_prime1" title="@{repeating_XP_$X_prime1}" class="short" value="10"><h4><b>%</b></h4></td>
+            </tr>
+        </table>
+        </fieldset>
     </div>
     <div class="sheet-col">
         <h4><b>Experience</b></h4>
-        <fieldset class="repeating_XP2" name="attr_repxp2"><table>
-    <tr>
-        <td><h4><b>Class:</b></h4><br><input type="text" name="attr_expclassname2" title="@{repeating_XP2_$X_expclassname2}"></td>
-        <td><h4><b>To Next:</b></h4><br><input type="text" name="attr_expnextlevel2" title="@{repeating_XP2_$X_expnextlevel2}"></td>
-    </tr>
-    <tr>
-        <td><h4><b>Current Exp:</b></h4><br><input type="text" name="attr_expcurrent2" title="@{repeating_XP2_$X_expcurrent2}" value="0"></td>
-        <td><h4><b>Gained Exp:</b></h4><br><input type="text" name="attr_expgain2" title="@{repeating_XP2_$X_expgain2}" value="0"></td>
-    </tr>
-    <tr>
-        <td><h4><b>New Exp Total:</b></h4><br><input type="text" name="attr_expnew2" title="@{repeating_XP2_$X_expnew2}" value="@{expcurrent2}+@{expgain2}" disabled="true"></td>
-        <td><h4><b>Prime Req Exp Total:</b></h4><br><input type="text" name="attr_expprime2" title="@{repeating_XP2_$X_expprime2}" value="@{expcurrent2}+round(@{expgain2}*(1+(@{prime2}/100)))" disabled="true"></td>
-    </tr>
-    <tr>
-        <td><h4><b>Prime Requisite Bonus:</b></h4><br><input type="text" name="attr_prime2" title="@{repeating_XP2_$X_prime2}" class="short" value="10"><h4><b>%</b></h4></td>
-    </tr>
-    </table></fieldset>
+        <fieldset class="repeating_XP2" name="attr_repxp2">
+        <table>
+            <tr>
+                <td><h4><b>Class:</b></h4><br><input type="text" name="attr_expclassname2" title="@{repeating_XP2_$X_expclassname2}"></td>
+                <td><h4><b>To Next:</b></h4><br><input type="text" name="attr_expnextlevel2" title="@{repeating_XP2_$X_expnextlevel2}"></td>
+            </tr>
+            <tr>
+                <td><h4><b>Current Exp:</b></h4><br><input type="text" name="attr_expcurrent2" title="@{repeating_XP2_$X_expcurrent2}" value="0"></td>
+                <td><h4><b>Gained Exp:</b></h4><br><input type="text" name="attr_expgain2" title="@{repeating_XP2_$X_expgain2}" value="0"></td>
+            </tr>
+            <tr>
+                <td><h4><b>New Exp Total:</b></h4><br><input type="text" name="attr_expnew2" title="@{repeating_XP2_$X_expnew2}" value="@{expcurrent2}+@{expgain2}" disabled="true"></td>
+                <td><h4><b>Prime Req Exp Total:</b></h4><br><input type="text" name="attr_expprime2" title="@{repeating_XP2_$X_expprime2}" value="@{expcurrent2}+round(@{expgain2}*(1+(@{prime2}/100)))" disabled="true"></td>
+            </tr>
+            <tr>
+                <td><h4><b>Prime Requisite Bonus:</b></h4><br><input type="text" name="attr_prime2" title="@{repeating_XP2_$X_prime2}" class="short" value="10"><h4><b>%</b></h4></td>
+            </tr>
+        </table>
+        </fieldset>
     </div>
 </div>
+    <br>
+    <h4><b>Experience Notes:</b></h4>
+    <br>
+    <textarea name="attr_expnotes" title="@{expnotes}" placeholder="Session 1: 200 EXP, Session 2: 300 EXP, Session 3: 100 EXP or stuff like that"></textarea>
     </div></div>
     
 <div class="sheet-tab-content sheet-section-character-info-tracker">
