--- a/DnD_Original D&D/DnD_OD&D.html
+++ b/DnD_Original D&D/DnD_OD&D.html
@@ -1,24 +1,3 @@
-<!doctype html>
-
-<!-- version 1.0 -->
-
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-
-  <title>Original Dungeons & Dragons Character Sheet</title>
-  <meta name="description" content="The HTML5 Herald">
-  <meta name="author" content="SitePoint">
-
-  <link rel="stylesheet" href="DnD_OD&D.css">
-</head>
-
-<body>
-
-<form autocomplete="off" class="sheetform"><div class="charmancer tab-pane charsheet" style="display: none;"></div><div class="charactersheet tab-pane charsheet lang-en" style="display: block;">
-
-
-
 <!-- Original Dungeons & Dragons Character Sheet CSS */ -->
 <!-- Version 1.0 -->
 
@@ -53,7 +32,7 @@
       <!-- ROW 2 -->
       <div class="sheet-flex-row">
         <span class="sheet-flex-col sheet-flex-sixteenth"><label>Str.</label></span>
-        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_strength" title="@{Strength}" placeholder="0" value="0" min="3" max="18" /></span>
+        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_strength" title="@{Strength}" placeholder="0" value="0" /></span>
           <!-- (<input type="text" name="attr_ExceptionalStrength" title="@{ExceptionalStrength}" value="0" min="0" max="100" />) -->
           <!-- <button type="roll" name="roll_testattack" value="&{template:default} {{name=@{character_name}}} {{result=[[3d6 + @{strength}]]}}"></button><span class="dee">d</span> -->
         <span class="sheet-flex-col sheet-flex-six-sixteenth"><input class="sheet-attr-mod sheet-fill" name="attr_strength_modifiers" type="text" /></span>
@@ -64,7 +43,7 @@
       <!-- ROW 3 -->
       <div class="sheet-flex-row">
         <span class="sheet-flex-col sheet-flex-sixteenth"><label>Int.</label></span>
-        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Intelligence}" placeholder="0" value="0" min="3" max="18" /></span>
+        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Intelligence}" placeholder="0" value="0" /></span>
           <!-- <button type="roll" name="roll_testattack" value="&{template:default} {{name=@{character_name}}} {{result=[[3d6 + @{intelligence}]]}}"></button><span class="dee">d</span> -->
         <span class="sheet-flex-col sheet-flex-six-sixteenth"><input class="sheet-attr-mod sheet-fill" name="attr_intelligence_modifiers" type="text" /></span>
         <span class="sheet-flex-col sheet-flex-quarter"><label>HD</label><input class="sheet-attr sheet-fill" type="text" name="attr_HitPoints" title="@{HitPoints}" value="0" /></span>
@@ -74,7 +53,7 @@
       <!-- ROW 4 -->
       <div class="sheet-flex-row">
         <span class="sheet-flex-col sheet-flex-sixteenth"><label>Wis.</label></span>
-        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Wisdom}" placeholder="0" value="0" min="3" max="18" /></span>
+        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Wisdom}" placeholder="0" value="0" /></span>
         <!-- <button type="roll" name="roll_testattack" value="&{template:default} {{name=@{character_name}}} {{result=[[3d6 + @{wisdom}]]}}"></button><span class="dee">d</span> -->
         <span class="sheet-flex-col sheet-flex-six-sixteenth"><input class=" sheet-attr-mod sheet-fill" name="attr_wisdom_modifiers" type="text" /></span>
         <span class="sheet-flex-col sheet-flex-half"><label>Fighting&nbsp;Capability</label><input class="sheet-attr sheet-fill" type="text" name="attr_FightingCapability" title="@{FightingCapability}" value="Man" /></span>
@@ -83,7 +62,7 @@
       <!-- ROW 5 -->
       <div class="sheet-flex-row">
         <span class="sheet-flex-col sheet-flex-sixteenth"><label>Con.</label></span>
-        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Constitution}" placeholder="0" value="0" min="3" max="18" /></span>
+        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Constitution}" placeholder="0" value="0" /></span>
         <!-- <button type="roll" name="roll_testattack" value="&{template:default} {{name=@{character_name}}} {{result=[[3d6 + @{constitution}]]}}"></button><span class="dee">d</span> -->
         <span class="sheet-flex-col sheet-flex-six-sixteenth"><input class=" sheet-attr-mod sheet-fill" name="attr_constitution_modifiers" type="text" /></span>
         <span class="sheet-flex-col sheet-flex-half">&nbsp;</span>
@@ -92,7 +71,7 @@
       <!-- ROW 6 -->
       <div class="sheet-flex-row">
         <span class="sheet-flex-col sheet-flex-sixteenth"><label>Dex.</label></span>
-        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Dexterity}" placeholder="0" value="0" min="3" max="18" /></span>
+        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Dexterity}" placeholder="0" value="0" /></span>
           <!-- <button type="roll" name="roll_testattack" value="&{template:default} {{name=@{character_name}}} {{result=[[3d6 + @{dexterity}]]}}"></button><span class="dee">d</span> -->
         <span class="sheet-flex-col sheet-flex-six-sixteenth"><input class=" sheet-attr-mod sheet-fill" name="attr_dexterity_modifiers" type="text" /></span>
         <span class="sheet-flex-col sheet-flex-half"><label>Find&nbsp;Secret&nbsp;Passage</label><input class="sheet-attr sheet-fill" type="text" name="attr_FindPassage" title="@{FindPassage}" value="1–2" /></span>
@@ -101,7 +80,7 @@
       <!-- ROW 7 -->
       <div class="sheet-flex-row">
         <span class="sheet-flex-col sheet-flex-sixteenth"><label>Chr.</label></span>
-        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Charisma}" placeholder="0" value="0" min="3" max="18" /></span>
+        <span class="sheet-flex-col sheet-flex-sixteenth"><input class="sheet-attr sheet-fill" type="text" name="attr_intelligence" title="@{Charisma}" placeholder="0" value="0" /></span>
           <!-- <button type="roll" name="roll_testattack" value="&{template:default} {{name=@{character_name}}} {{result=[[3d6 + @{charisma}]]}}"></button><span class="dee">d</span> -->
         <span class="sheet-flex-col sheet-flex-six-sixteenth"><input class=" sheet-attr-mod sheet-fill" name="attr_charisma_modifiers" type="text" /></span>
         <span class="sheet-flex-col sheet-flex-quarter"><label>Open&nbsp;Door</label><input class="sheet-attr sheet-fill" type="text" name="attr_OpenDoor" title="@{OpenDoor}" value="1–2" /></span>
@@ -137,7 +116,7 @@
         </span>
       </div>
       <div class="sheet-flex-row">
-        <span class="sheet-flex-col sheet-flex-full sheet-misc"><label>Misc.:</label><textarea class="sheet-fill" name="attr_Misc" title="@{Miscellaneous}"  value=""></textarea></span>
+        <span class="sheet-flex-col sheet-flex-full sheet-misc"><label>Misc.:</label><textarea class="sheet-fill" name="attr_Misc" title="@{Miscellaneous}"  ></textarea></span>
       </div>
     </div> <!-- END sheet-section sheet-lanuages-saves-misc -->
 
@@ -145,17 +124,17 @@
 
       <div class="sheet-section equipment sheet-grid-item sheet-grid-item1">
         <div class="sheet-label">Equipment</div>
-        <textarea class="sheet-textarea-fill" name="attr_Equipment" title="@{Equipment}"  value=""></textarea>
+        <textarea class="sheet-textarea-fill" name="attr_Equipment" title="@{Equipment}"  ></textarea>
       </div> <!-- END sheet-section equipment -->
 
       <div class="sheet-section treasure sheet-grid-item sheet-grid-item2">
         <div class="sheet-label">Treasure</div>
-        <textarea class="sheet-textarea-fill" name="attr_Treasure" title="@{Treasure}"  value=""></textarea>
+        <textarea class="sheet-textarea-fill" name="attr_Treasure" title="@{Treasure}"  ></textarea>
       </div> <!-- END sheet-section treasure -->
 
       <div class="sheet-section spells-magic sheet-grid-item sheet-grid-item3">
         <div class="sheet-label">Spells/Magic</div>
-        <textarea class="sheet-textarea-fill" name="attr_SpellsMagic" title="@{SpellsMagic}" value=""></textarea>
+        <textarea class="sheet-textarea-fill" name="attr_SpellsMagic" title="@{SpellsMagic}" ></textarea>
       </div> <!-- END sheet-section spells-magic -->
 
       <!-- <div class="sheet-section sheet-grid-item sheet-grid-item4"></div> -->
@@ -181,7 +160,7 @@
 
       <div class="sheet-section encumbrance sheet-grid-item sheet-grid-item6">
         <div class="sheet-label sheet-fill">Encumbrance</div>
-        <textarea class="sheet-textarea-fill" name="attr_Encumbrance" title="@{Encumbrance}" value=""></textarea>
+        <textarea class="sheet-textarea-fill" name="attr_Encumbrance" title="@{Encumbrance}" ></textarea>
       </div> <!-- END sheet-section encumbrance -->
 
       <!-- <div class="sheet-section sheet-grid-item sheet-grid-item7"></div> -->
@@ -200,9 +179,3 @@
 
 
   </div> <!-- END charsheet sheet-odd -->
-
-
-</form>
-
-</body>
-</html>
